ECOCKPIT-264 arm64: dts: freescale: imx8qm a53: add device imx_shmem_net
imx_shmem_net uses MU8A device to synchronize.
imx_shmem_net uses shared memory region 'shmem_dma'.
remove the reserved memory for encoder/decoder rpc,
as VPU is not assigned to A53, and reuse this address range for 'shmem_dma'.

Signed-off-by: Seb Fagard <sebastien.fagard@nxp.com>

--- a/arch/arm64/boot/dts/freescale/fsl-imx8qm-a53.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qm-a53.dtsi
@@ -102,13 +102,18 @@
 			no-map;
 			reg = <0 0x90400000 0 0x1C00000>;
 		};
+		shmem_dma_reserved:shmem_dma@0x92000000 {
+			compatible = "shared-dma-pool";
+			no-map;
+			reg = <0 0x92000000 0 0x400000>;
+		};
 		decoder_rpc: decoder_rpc@0x92000000 {
 			no-map;
-			reg = <0 0x92000000 0 0x200000>;
+			reg = <0 0x92000000 0 0x0>;
 		};
-		encoder_rpc: encoder_rpc@0x92200000 {
+		encoder_rpc: encoder_rpc@0x92000000 {
 			no-map;
-			reg = <0 0x92200000 0 0x200000>;
+			reg = <0 0x92000000 0 0x0>;
 		};
 		dsp_reserved: dsp@0x92400000 {
 			no-map;
