ECOCKPIT-264 arm64: dts: freescale: imx8qm a72: add device imx_shmem_net
imx_shmem_net uses MU8B to synchronize.
imx_shmem_net uses shared memory region 'shmem_dma' to communicate.

Signed-off-by: Seb Fagard <sebastien.fagard@nxp.com>

--- a/arch/arm64/boot/dts/freescale/fsl-imx8qm-a72.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qm-a72.dtsi
@@ -102,6 +102,11 @@
 			no-map;
 			reg = <0 0xd0400000 0 0x1C00000>;
 		};
+		shmem_dma_reserved:shmem_dma@0x92000000 {
+			compatible = "shared-dma-pool";
+			no-map;
+			reg = <0 0x92000000 0 0x400000>;
+		};
 		decoder_rpc: decoder_rpc@0xd2000000 {
 			no-map;
 			reg = <0 0xd2000000 0 0x200000>;
