--- a/arch/arm64/boot/dts/freescale/fsl-imx8qm-a53.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qm-a53.dtsi
@@ -162,6 +162,36 @@
 		status = "okay";
 	};
 
+	mu_seco2: mu@31560000 {
+		compatible = "fsl,imx8-seco-mu";
+		reg = <0x0 0x31560000 0x0 0x10000>;
+		power-domains = <&pd_seco_mu_2>;
+		interrupts = <GIC_SPI 448 IRQ_TYPE_LEVEL_HIGH>;
+		fsl,seco_mu_id = <1>;
+		fsl,seco_max_users = <4>;
+		status = "okay";
+	};
+
+	mu_seco3: mu@31570000 {
+		compatible = "fsl,imx8-seco-mu";
+		reg = <0x0 0x31570000 0x0 0x10000>;
+		power-domains = <&pd_seco_mu_3>;
+		interrupts = <GIC_SPI 449 IRQ_TYPE_LEVEL_HIGH>;
+		fsl,seco_mu_id = <2>;
+		fsl,seco_max_users = <2>;
+		status = "okay";
+	};
+
+	mu_seco4: mu@31580000 {
+		compatible = "fsl,imx8-seco-mu";
+		reg = <0x0 0x31580000 0x0 0x10000>;
+		power-domains = <&pd_seco_mu_4>;
+		interrupts = <GIC_SPI 450 IRQ_TYPE_LEVEL_HIGH>;
+		fsl,seco_mu_id = <3>;
+		fsl,seco_max_users = <2>;
+		status = "okay";
+	};
+
 	mu13: mu13@5d280000 {
 		compatible = "fsl,imx8-mu-dsp";
 		reg = <0x0 0x5d280000 0x0 0x10000>;
@@ -219,7 +249,7 @@
 		power-domains = <&pd_vpu_enc>;
 		reg-rpc-system = <0x40000000>;
 
-		resolution-max = <1920 1080>;
+		resolution-max = <1920 1920>;
 		fps-max = <120>;
 		status = "disabled";
 
