--- a/arch/arm64/boot/dts/freescale/fsl-imx8qm-mek-a53.dtsi
+++ b/arch/arm64/boot/dts/freescale/fsl-imx8qm-mek-a53.dtsi
@@ -472,13 +472,21 @@
 			>;
 		};
 
+		pinctrl_pcieb: pciebgrp {
+			fsl,pins = <
+				SC_P_PCIE_CTRL1_CLKREQ_B_LSIO_GPIO4_IO30	0x06000021
+				SC_P_PCIE_CTRL1_WAKE_B_LSIO_GPIO4_IO31		0x04000021
+				SC_P_PCIE_CTRL1_PERST_B_LSIO_GPIO5_IO00		0x06000021
+			>;
+		};
+
 		pinctrl_sim0: sim0grp {
 			fsl,pins = <
-				SC_P_SIM0_CLK_DMA_SIM0_CLK		0x21
-				SC_P_SIM0_IO_DMA_SIM0_IO		0x21
-				SC_P_SIM0_PD_DMA_SIM0_PD		0x21
-				SC_P_SIM0_POWER_EN_DMA_SIM0_POWER_EN	0x21
-				SC_P_SIM0_RST_DMA_SIM0_RST		0x21
+				SC_P_SIM0_CLK_DMA_SIM0_CLK		0xc0000021
+				SC_P_SIM0_IO_DMA_SIM0_IO		0xc2000021
+				SC_P_SIM0_PD_DMA_SIM0_PD		0xc0000021
+				SC_P_SIM0_POWER_EN_DMA_SIM0_POWER_EN	0xc0000021
+				SC_P_SIM0_RST_DMA_SIM0_RST		0xc0000021
 			>;
 		};
 
@@ -654,7 +662,7 @@
 
 		pinctrl_wifi: wifigrp{
 			fsl,pins = <
-				SC_P_SCU_GPIO0_07_SCU_DSC_RTC_CLOCK_OUTPUT_32K	0x20
+				/* reserve pin init/idle_state to support multiple wlan cards */
 			>;
 		};
 
@@ -1145,16 +1153,17 @@
 	status = "disabled";
 };
 
-&pd_cm40_intmux {
-	early_power_on;
+&pcieb {
+	ext_osc = <1>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_pcieb>;
+	reset-gpio = <&gpio5 0 GPIO_ACTIVE_LOW>;
+	clkreq-gpio = <&gpio4 30 GPIO_ACTIVE_LOW>;
+	status = "disabled";
 };
 
 &intmux_cm40 {
 	status = "disabled";
-};
-
-&pd_cm41_intmux {
-	early_power_on;
 };
 
 &intmux_cm41 {
@@ -1601,7 +1610,11 @@
 };
 
 &edma0 {
-	reg = <0x0 0x5a2c0000 0x0 0x10000>, /* channel12 UART0 rx */
+	reg = <0x0 0x5a200000 0x0 0x10000>, /* channel0 LPSPI0 rx */
+	      <0x0 0x5a210000 0x0 0x10000>, /* channel1 LPSPI0 tx */
+	      <0x0 0x5a260000 0x0 0x10000>, /* channel6 LPSPI3 rx */
+	      <0x0 0x5a270000 0x0 0x10000>, /* channel7 LPSPI3 tx */
+	      <0x0 0x5a2c0000 0x0 0x10000>, /* channel12 UART0 rx */
 	      <0x0 0x5a2d0000 0x0 0x10000>, /* channel13 UART0 tx */
 	      <0x0 0x5a2e0000 0x0 0x10000>, /* channel14 UART1 rx */
 	      <0x0 0x5a2f0000 0x0 0x10000>, /* channel15 UART1 tx */
@@ -1609,28 +1622,47 @@
 	      <0x0 0x5a330000 0x0 0x10000>, /* channel19 UART3 tx */
 	      <0x0 0x5a340000 0x0 0x10000>, /* channel20 UART4 rx */
 	      <0x0 0x5a350000 0x0 0x10000>; /* channel21 UART4 tx */
-	dma-channels = <8>;
-	interrupts = <GIC_SPI 434 IRQ_TYPE_LEVEL_HIGH>,
-		     <GIC_SPI 435 IRQ_TYPE_LEVEL_HIGH>,
-		     <GIC_SPI 436 IRQ_TYPE_LEVEL_HIGH>,
-		     <GIC_SPI 437 IRQ_TYPE_LEVEL_HIGH>,
-		     <GIC_SPI 440 IRQ_TYPE_LEVEL_HIGH>,
-		     <GIC_SPI 441 IRQ_TYPE_LEVEL_HIGH>,
-		     <GIC_SPI 442 IRQ_TYPE_LEVEL_HIGH>,
-		     <GIC_SPI 443 IRQ_TYPE_LEVEL_HIGH>;
-	interrupt-names = "edma0-chan12-rx", "edma0-chan13-tx",
-			  "edma0-chan14-rx", "edma0-chan15-tx",
-			  "edma0-chan18-rx", "edma0-chan19-tx",
-			  "edma0-chan20-rx", "edma0-chan21-tx";
+	dma-channels = <12>;
+	interrupts = <GIC_SPI 416 IRQ_TYPE_LEVEL_HIGH>,
+				 <GIC_SPI 417 IRQ_TYPE_LEVEL_HIGH>,
+				 <GIC_SPI 422 IRQ_TYPE_LEVEL_HIGH>,
+				 <GIC_SPI 423 IRQ_TYPE_LEVEL_HIGH>,
+				 <GIC_SPI 434 IRQ_TYPE_LEVEL_HIGH>,
+				 <GIC_SPI 435 IRQ_TYPE_LEVEL_HIGH>,
+				 <GIC_SPI 436 IRQ_TYPE_LEVEL_HIGH>,
+				 <GIC_SPI 437 IRQ_TYPE_LEVEL_HIGH>,
+				 <GIC_SPI 440 IRQ_TYPE_LEVEL_HIGH>,
+				 <GIC_SPI 441 IRQ_TYPE_LEVEL_HIGH>,
+				 <GIC_SPI 442 IRQ_TYPE_LEVEL_HIGH>,
+				 <GIC_SPI 443 IRQ_TYPE_LEVEL_HIGH>;
+	interrupt-names = "edma0-chan0-rx", "edma0-chan1-tx",
+					  "edma0-chan6-rx", "edma0-chan7-tx",
+					  "edma0-chan12-rx", "edma0-chan13-tx",
+					  "edma0-chan14-rx", "edma0-chan15-tx",
+					  "edma0-chan18-rx", "edma0-chan19-tx",
+					  "edma0-chan20-rx", "edma0-chan21-tx";
+	pdomains = <&pd_dma0_chan0>, <&pd_dma0_chan1>, /* lpspi0 */
+			   <&pd_dma0_chan6>, <&pd_dma0_chan7>, /* lpspi3 */
+			   <&pd_dma0_chan12>, <&pd_dma0_chan13>, /* lpuart0 */
+			   <&pd_dma0_chan14>, <&pd_dma0_chan15>, /* lpuart1 */
+			   <&pd_dma0_chan18>, <&pd_dma0_chan19>, /* lpuart3 */
+			   <&pd_dma0_chan20>, <&pd_dma0_chan21>; /* lpuart4 */
 };
 
 &edma2 {
 	reg =	<0x0 0x59280000 0x0 0x10000>, /* spdif0 rx */
-		<0x0 0x59290000 0x0 0x10000>; /* spdif0 tx */
-	dma-channels = <2>;
+			<0x0 0x59290000 0x0 0x10000>, /* spdif0 tx */
+			<0x0 0x592A0000 0x0 0x10000>, /* spdif1 rx */
+			<0x0 0x592B0000 0x0 0x10000>; /* spdif1 tx */
+	dma-channels = <4>;
 	interrupts =	<GIC_SPI 457 IRQ_TYPE_LEVEL_HIGH>, /* spdif0 */
-			<GIC_SPI 459 IRQ_TYPE_LEVEL_HIGH>;
-	interrupt-names = "edma2-chan8-rx", "edma2-chan9-tx"; /* spdif0 */
+					<GIC_SPI 459 IRQ_TYPE_LEVEL_HIGH>,
+					<GIC_SPI 461 IRQ_TYPE_LEVEL_HIGH>, /* spdif1 */
+					<GIC_SPI 463 IRQ_TYPE_LEVEL_HIGH>;
+	interrupt-names =	"edma2-chan8-rx", "edma2-chan9-tx", /* spdif0 */
+						"edma2-chan10-rx", "edma2-chan11-tx"; /* spdif1 */
+	pdomains = <&pd_dma2_chan8>, <&pd_dma2_chan9>,		/* spdif0 */
+			   <&pd_dma2_chan10>, <&pd_dma2_chan11>;	/* spdif1 */
 };
 
 &edma3 {
